[package]
name = "cch"
version = "0.1.0"
edition = "2021"
description = "Claude Code Helper — save and manage session contexts"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
open = "5"
chrono = "0.4"

[profile.release]
strip = true
lto = true
